[tool.poetry]
name = "istant"
version = "0.0.1"
description = "A Python package to check if an object is of a certain type in an instant."
authors = ["João Palmeiro <joaommpalmeiro@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/joaopalmeiro/istant"
repository = "https://github.com/joaopalmeiro/istant"
keywords = ["istant", "utilities"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/joaopalmeiro/istant/issues"
"Twitter" = "https://twitter.com/joaompalmeiro"

[tool.poetry.dependencies]
python = "^3.6"
importlib-metadata = {version = "^1.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
mypy = "^0.812"
isort = "^5.7.0"
black = "^20.8b1"
flake8 = "^3.8.4"
bandit = "^1.7.0"
flake8-bugbear = "^21.3.1"
flake8-comprehensions = "^3.3.1"
pep8-naming = "^0.11.1"
flake8-builtins = "^1.5.3"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
